--- a/package.json
+++ b/package.json
@@ -9,16 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "i18next": "^23.5.1",
+    "next": "13.5.5",
+    "next-i18next": "^14.0.3",
+    "next-intl": "^2.20.2",
+    "next-language-detector": "^1.0.2",
     "react": "^18",
     "react-dom": "^18",
-    "next": "13.5.5"
+    "react-i18next": "^13.3.0"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "13.5.5"
+    "eslint-config-next": "13.5.5",
+    "typescript": "^5"
   }
 }
