--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next-sanity": "^5.5.8",
     "react": "^18",
     "react-dom": "^18",
+    "react-error-boundary": "^4.0.11",
     "react-i18next": "^13.3.0",
     "sanity": "^3.18.1",
     "styled-components": "5.2"
