--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -2,11 +2,25 @@ name: Vercel Integration Deployment
 env:
   VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
   VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
+  SANITY_AUTH_TOKEN: ${{ secrets.SANITY_AUTH_TOKEN }}
 on:
   push:
     branches-ignore:
       - main
 jobs:
+  Sanity-deploy:
+    name: Build & Deploy Sanity Studio
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Install dependencies
+        run: |
+          npm install
+          npm install @sanity/cli
+      - name: Deploy Sanity Studio
+        run: |
+          set -e
+          SANITY_AUTH_TOKEN="${{ secrets.SANITY_AUTH_TOKEN }}" npx sanity deploy
   Deploy-Preview:
     runs-on: ubuntu-latest
     steps:
