--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "graph": "yarn graphql-codegen init",
     "dev": "next dev -p 3333",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "deploy:cms": "sanity graphql deploy"
   },
   "dependencies": {
     "@apollo/client": "^3.8.6",
@@ -15,6 +15,7 @@
     "@sanity/document-internationalization": "^2.0.1",
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.18.1",
+    "env-cmd": "^10.1.0",
     "graphql": "^16.8.1",
     "i18next": "^23.5.1",
     "next": "13.5.5",
