--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,10 +3,10 @@
         "browser": true,
         "es2021": true
     },
-    "extends": [/* 
+    "extends": [
         "next/core-web-vitals",
         "eslint:recommended",
-        "plugin:@typescript-eslint/recommended" */
+        "plugin:@typescript-eslint/recommended"
     ],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
