--- a/package.json
+++ b/package.json
@@ -7,31 +7,35 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "prettier": "prettier --write .",
+    "prepare": "husky install",
     "start:sanity": "sanity start",
     "build:sanity": "sanity build",
-    "deploy:cms": "sanity graphql deploy",
-    "deploy:sanity": "sanity deploy"
+    "deploy:graphql": "sanity graphql deploy",
+    "deploy:sanity": "sanity deploy",
+    "design-tokens-utils": "design-tokens-utils --tokens=./tokens/tokens.json --path=src/styles --disableIconsFigma --fontNameIcons=chazz"
   },
   "dependencies": {
     "@apollo/client": "^3.8.6",
-    "@sanity/document-internationalization": "^2.0.1",
-    "@sanity/image-url": "^1.0.2",
-    "graphql": "^16.8.1",
-    "i18next": "^23.5.1",
-    "next-i18next": "^14.0.3",
-    "next-intl": "^2.20.2",
-    "next-language-detector": "^1.0.2",
-    "react-error-boundary": "^4.0.11",
-    "react-i18next": "^13.3.0",
     "@portabletext/react": "3.0.11",
     "@sanity/client": "6.5.0",
     "@sanity/demo": "1.0.2",
+    "@sanity/document-internationalization": "^2.0.1",
+    "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "3.18.0",
     "@tailwindcss/typography": "0.5.10",
+    "design-tokens-utils": "^0.3.9",
+    "graphql": "^16.8.1",
+    "i18next": "^23.5.1",
     "next": "13.5.4",
+    "next-i18next": "^14.0.3",
+    "next-intl": "^2.20.2",
+    "next-language-detector": "^1.0.2",
     "next-sanity": "5.5.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-error-boundary": "^4.0.11",
+    "react-i18next": "^13.3.0",
     "sanity": "3.18.0",
     "sanity-plugin-iframe-pane": "2.5.8",
     "styled-components": "5.3.11"
@@ -39,22 +43,24 @@
   "devDependencies": {
     "@next/eslint-plugin-next": "^13.5.5",
     "@types/node": "^20",
+    "@types/react": "18.2.28",
     "@types/react-dom": "^18",
     "@typescript-eslint/eslint-plugin": "^6.8.0",
     "@typescript-eslint/parser": "^6.8.0",
-    "eslint-config-prettier": "^9.0.0",
-    "sass": "^1.69.4",
-    "serve": "^14.2.1",
-    "@types/react": "18.2.28",
     "autoprefixer": "10.4.16",
     "eslint": "8.51.0",
     "eslint-config-next": "13.5.4",
+    "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-simple-import-sort": "10.0.0",
+    "husky": "^8.0.3",
     "postcss": "8.4.31",
     "prettier": "3.0.3",
     "prettier-plugin-packagejson": "2.4.6",
     "prettier-plugin-tailwindcss": "0.5.5",
+    "sass": "^1.69.4",
+    "serve": "^14.2.1",
     "tailwindcss": "3.3.3",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "xmlbuilder": "^15.1.1"
   }
 }
