--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "styled-components": "5.3.11"
   },
   "devDependencies": {
+    "@commitlint/cli": "^18.0.0",
+    "@commitlint/config-conventional": "^18.0.0",
     "@next/eslint-plugin-next": "^13.5.5",
     "@types/node": "^20",
     "@types/react": "18.2.28",
