--- a/package.json
+++ b/package.json
@@ -18,24 +18,27 @@
   "dependencies": {
     "@apollo/client": "^3.8.6",
     "@portabletext/react": "3.0.11",
+    "@reduxjs/toolkit": "^1.9.7",
     "@sanity/client": "6.5.0",
     "@sanity/demo": "1.0.2",
     "@sanity/document-internationalization": "^2.0.1",
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "3.18.0",
     "@tailwindcss/typography": "0.5.10",
+    "@types/react-redux": "^7.1.28",
     "design-tokens-utils": "^0.3.9",
     "graphql": "^16.8.1",
-    "i18next": "^23.5.1",
+    "i18next": "^23.6.0",
     "next": "13.5.4",
     "next-i18next": "^14.0.3",
-    "next-intl": "^2.20.2",
+    "next-intl": "^3.0.0-beta.19",
     "next-language-detector": "^1.0.2",
     "next-sanity": "5.5.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-error-boundary": "^4.0.11",
-    "react-i18next": "^13.3.0",
+    "react-i18next": "^13.3.1",
+    "react-redux": "^8.1.3",
     "sanity": "3.18.0",
     "sanity-plugin-iframe-pane": "2.5.8",
     "styled-components": "5.3.11"
