--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "build:sanity": "sanity build",
     "deploy:graphql": "sanity graphql deploy",
     "deploy:sanity": "sanity deploy",
-    "design-tokens-utils": "design-tokens-utils --tokens=./tokens/tokens.json --path=src/styles --disableIconsFigma --fontNameIcons=chazz"
+    "design-tokens-utils": "design-tokens-utils --tokens=./tokens/tokens.json --path=src/styles --disableIconsFigma --fontNameIcons=chazz",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@apollo/client": "^3.8.6",
@@ -47,6 +49,15 @@
     "@commitlint/cli": "^18.0.0",
     "@commitlint/config-conventional": "^18.0.0",
     "@next/eslint-plugin-next": "^13.5.5",
+    "@storybook/addon-a11y": "^7.5.1",
+    "@storybook/addon-essentials": "^7.5.1",
+    "@storybook/addon-interactions": "^7.5.1",
+    "@storybook/addon-links": "^7.5.1",
+    "@storybook/addon-onboarding": "^1.0.8",
+    "@storybook/blocks": "^7.5.1",
+    "@storybook/nextjs": "^7.5.1",
+    "@storybook/react": "^7.5.1",
+    "@storybook/testing-library": "^0.2.2",
     "@types/node": "^20",
     "@types/react": "18.2.28",
     "@types/react-dom": "^18",
@@ -57,6 +68,7 @@
     "eslint-config-next": "13.5.4",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-simple-import-sort": "10.0.0",
+    "eslint-plugin-storybook": "^0.6.15",
     "husky": "^8.0.3",
     "postcss": "8.4.31",
     "prettier": "3.0.3",
@@ -64,6 +76,7 @@
     "prettier-plugin-tailwindcss": "0.5.5",
     "sass": "^1.69.4",
     "serve": "^14.2.1",
+    "storybook": "^7.5.1",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
     "xmlbuilder": "^15.1.1"
