docs: add jsdoc

--- a/package.json
+++ b/package.json
@@ -4,21 +4,24 @@
   "private": true,
   "scripts": {
     "dev": "next dev -p 3333",
-    "build": "next build",
     "start": "next start",
+    "start:sanity": "sanity start",
+    "build": "next build",
+    "build:sanity": "sanity build",
+    "build:storybook": "storybook build --docs",
     "lint": "next lint",
     "prettier": "prettier --write .",
-    "prepare": "husky install",
-    "start:sanity": "sanity start",
-    "build:sanity": "sanity build",
     "deploy:graphql": "sanity graphql deploy",
     "deploy:sanity": "sanity deploy",
     "design-tokens-utils": "design-tokens-utils --tokens=./tokens/tokens.json --path=src/styles --disableIconsFigma --fontNameIcons=chazz",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "docs": "jsdoc -c jsdoc.json && node .chazz/docs.js"
   },
   "dependencies": {
     "@apollo/client": "^3.8.6",
+    "@mdx-js/loader": "^3.0.0",
+    "@mdx-js/react": "^3.0.0",
+    "@next/mdx": "^14.0.0",
     "@portabletext/react": "3.0.11",
     "@reduxjs/toolkit": "^1.9.7",
     "@sanity/client": "6.5.0",
@@ -27,6 +30,7 @@
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "3.18.0",
     "@tailwindcss/typography": "0.5.10",
+    "@types/mdx": "^2.0.9",
     "@types/react-redux": "^7.1.28",
     "design-tokens-utils": "^0.3.9",
     "graphql": "^16.8.1",
@@ -70,6 +74,8 @@
     "eslint-plugin-simple-import-sort": "10.0.0",
     "eslint-plugin-storybook": "^0.6.15",
     "husky": "^8.0.3",
+    "jsdoc": "^4.0.2",
+    "live-server": "^1.2.2",
     "postcss": "8.4.31",
     "prettier": "3.0.3",
     "prettier-plugin-packagejson": "2.4.6",
