--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+#documentation
+/docs/my-chazz
 
 # dependencies
 /node_modules
@@ -41,3 +43,6 @@ next-env.d.ts
 
 # sanity
 .sanity
+
+# storybook
+/storybook-static
