ci: update workflow

--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -5,8 +5,8 @@ env:
   SANITY_STUDIO_TOKEN: ${{ secrets.SANITY_STUDIO_TOKEN }}
 on:
   push:
-    branches-ignore:
-      - main
+    branches:
+      - integration
 jobs:
   Sanity-deploy:
     name: Build & Deploy Sanity Studio
